--- a/Leah/wk01/5-fri/trains/style.css
+++ b/Leah/wk01/5-fri/trains/style.css
@@ -1,4 +1,8 @@
-form{
+/*  */
+*{
+    box-sizing: border-box;
+}
+.form{
     max-width: 80%;
     text-align: center;
 }
@@ -10,4 +14,31 @@ input {
 button{
     display: block;
     margin: 2% auto;
+}
+.autocomplete {
+    position: relative;
+    display: inline-block;
+}
+.autocomplete-items {
+    position: absolute;
+    border: 1px solid #d4d4d4;
+    border-bottom: none;
+    border-top: none;
+    z-index: 99;
+    top: 100%;
+    left: 0;
+    right: 0;
+}
+.autocomplete-items div {
+    padding: 10px;
+    cursor: pointer;
+    background-color: #fff; 
+    border-bottom: 1px solid #d4d4d4; 
+}
+.autocomplete-items div:hover {
+    background-color: #e9e9e9; 
+}
+.autocomplete-active {
+    background-color: DodgerBlue !important; 
+    color: #ffffff; 
 }
