--- a/Leah/wk02/4-thu/online-bank/style.css
+++ b/Leah/wk02/4-thu/online-bank/style.css
@@ -2,48 +2,50 @@
     box-sizing: border-box;
 }
 body{
-    background-color: #A2A7A5;
+    background-color: lightgray;
     text-align: center;
     font-family: sans-serif;
     font-size: 1.2em;
     font-family: 'Montserrat', sans-serif;
 }
 header{
-    margin-bottom: 10vh;
+    margin-bottom: 10vw;
     text-align: left;
 }
 h1{
     font-size: 4vw;
     display: inline;
     font-family: 'Playfair Display', serif;
-    color: #B6174B;
+    color: black;
+    border-bottom: 0.07em solid black;
+    padding-right: 0.4em;
 }
 .logo{
     display: inline;
 }
 img{
     max-width: 10vw;
+    vertical-align: bottom;
 }
 .wrapper{
     display: flex;
     justify-content: space-around;
 }
 .savings{
-    border-radius: 6%;
     margin: 5px;
     min-height: 50vh;
     max-width: 45vw;
-    background-color: whitesmoke;
+    border-top: 5vh solid ForestGreen;
+    background-color: white;
     flex: 1;
     padding: 5vh 2vw;
     box-shadow: 1vw 2vh rgba(127, 127, 127, 0.75);
 }
 .checking{
-    border-radius: 6%;
     margin: 5px;
     min-height: 50vh;
     max-width: 45vw;
-    background-color: whitesmoke;
+    background-color: white;
     flex: 1;
     padding: 5vh 2vw;
     box-shadow: 1vw 2vh rgba(109, 105, 106, 0.75);
@@ -54,18 +56,19 @@ img{
 }
 button{
     margin: 4vh 2vw;
-    font-size: 3vw;
+    font-size: 2.6vw;
     border-radius: 2vh 0;
     padding: 2%;
     width: 15vw;
-    color: #B6174B;
+    color: black;
     box-shadow: 0.5vw 1vh rgba(109, 105, 106, 0.35);
     border: 0;
+    background-color: whitesmoke;
 }
 input{
     width: 85%;
     height: 10vh;
     font-size: 4vh;
     text-align: center;
-    border: 0;
+    border: 1vh 1vw solid whitesmoke;
 }
