Ruby intro homework

--- a/Leah/wk02/5-fri/timeoutApp/style.css
+++ b/Leah/wk02/5-fri/timeoutApp/style.css
@@ -25,9 +25,10 @@ small{
     width: 90vw;
     margin: 5vh auto;
     border: 0.3vh solid lightgrey;
+    padding: 5% 5%;
 }
 button{
-    font-size: 2vw;
+    font-size: 1.7vw;
     height: 4vh;
     vertical-align: middle;
 }
@@ -35,7 +36,7 @@ button{
     width: 40vw;
     height: 4vh;
     vertical-align: middle;
-    font-size: 2.5vw;
+    font-size: 2vw;
 }
 .inputs{
     margin-bottom: 3vh;
@@ -45,4 +46,10 @@ button{
     width: 10vw;
     font-size: 4vw;
     vertical-align: middle;
+}
+.answered{
+    background-color: lightgreen;
+}
+.unanswered{
+    background-color: mistyrose;
 }
