--- a/Leah/wk04/3-wed/stock_app/views/price_info.erb
+++ b/Leah/wk04/3-wed/stock_app/views/price_info.erb
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Stock price - <%= @stock.symbol if @stock != nil %></h1>
+        <h1>Stock price - <%= @stock.symbol if @stock %></h1>
         <nav>
         <ul>
             <li><a href="/">Home</a></li>
