--- a/Leah/wk05/4-thu/celestial_crud/views/partials/featured/featured_planets.erb
+++ b/Leah/wk05/4-thu/celestial_crud/views/partials/featured/featured_planets.erb
@@ -1,8 +1,14 @@
+<h2>Featured Planets</h2>
 <section class="featured">
     <% @planets.each do |planet| %>
         <section class="record">
-            <h2><%= planet.name %></h2>
-            <img class="thumb" src="<%= planet.photo_url %>" alt="<%= planet.name %>">
+            <a href="/planet/<%= planet.id %>">
+                <img class="thumb" src="<%= planet.photo_url %>" alt="<%= planet.name %>">
+                <p><%= planet.name %><p>
+            </a>
         </section>
     <% end %>
+    <% if @planets.count > 3 %>
+        <div style="width:8vw;">&nbsp;</div>
+    <%end %>
 </section>
