--- a/Leah/wk05/4-thu/celestial_crud/views/moons/index.erb
+++ b/Leah/wk05/4-thu/celestial_crud/views/moons/index.erb
@@ -1,9 +1,11 @@
 <h2>Moons</h2>
-    <% @moons.each do |moon| %>
+<section class="records-list">
+        <% @moons.each do |moon| %>
         <section class="record">
-            <h3><a href="/moon/<%= moon.id %>"><%= moon.name %></a></h3>
             <a href="/moon/<%= moon.id %>">
                 <img class="thumb" src="<%= moon.photo_url %>" alt="<%= moon.name %>">
             </a>
+            <p><a href="/moon/<%= moon.id %>"><%= moon.name %></a><p>
         </section>
     <% end %>  
+</section>
