--- a/Leah/wk05/4-thu/celestial_crud/views/partials/featured/featured_moons.erb
+++ b/Leah/wk05/4-thu/celestial_crud/views/partials/featured/featured_moons.erb
@@ -1,8 +1,14 @@
+<h2>Featured Moons</h2>
 <section class="featured">
     <% @moons.each do |moon| %>
         <section class="record">
-            <h2><%= moon.name %></h2>
-            <img class="thumb" src="<%= moon.photo_url %>" alt="<%= moon.name %>">
-        </section>
+            <a href="/moon/<%= moon.id %>">
+                <img class="thumb" src="<%= moon.photo_url %>" alt="<%= moon.name %>">
+                <p><%= moon.name %><p>
+            </a>
+        </section> 
     <% end %>   
+    <% if @moons.count > 3 %>
+        <div style="width:8vw;">&nbsp;</div>
+    <%end %>
 </section>
