--- a/Leah/wk05/4-thu/celestial_crud/views/planets/index.erb
+++ b/Leah/wk05/4-thu/celestial_crud/views/planets/index.erb
@@ -1,9 +1,11 @@
 <h2>Planets</h2>
-    <% @planets.each do |planet| %>
+<section class="records-list">
+        <% @planets.each do |planet| %>
         <section class="record">
-            <h3><a href="/planet/<%= planet.id %>"><%= planet.name %></a></h3>
             <a href="/planet/<%= planet.id %>">
                 <img class="thumb" src="<%= planet.photo_url %>" alt="<%= planet.name %>">
             </a>
+            <p><a href="/planet/<%= planet.id %>"><%= planet.name %></a><p>
         </section>
     <% end %>  
+</section>
