--- a/Leah/wk05/4-thu/celestial_crud/public/stylesheets/main.css
+++ b/Leah/wk05/4-thu/celestial_crud/public/stylesheets/main.css
@@ -6,6 +6,7 @@ body{
     background-color: black;
     text-align: center;
     color: white;
+    font-size: 1.5vw;
 }
 header{
     border-radius: 10px;
@@ -100,8 +101,8 @@ select{
     color:white;
     border-radius: 10px;
     max-height: 37vh;
-    padding: 2.5vh 2.5vh;
-    margin: 2.5vh 2.5vh;
+    padding: 2.5% 2.5%;
+    margin: 2.5% 2.5%;
     min-width: 20vw;
     max-width: 20vw;
     flex-basis: auto; /* default value */
@@ -114,8 +115,8 @@ select{
 }
 img {
     object-fit: cover;
-    max-width:15vw;
-    max-height:10vh;
+    max-width:80%;
+    max-height:80%;
     border-radius: 10px;
 }
 .info{
