--- a/Leah/wk08/1-mon/style.css
+++ b/Leah/wk08/1-mon/style.css
@@ -1,21 +1,26 @@
 *{
     box-sizing: border-box;
 }
+form{
+    display: inline-block;
+}
 .color-indicator{
-    height: 2vw;
-    width: 2vw;
+    height: 5vw;
+    width: 5vw;
+    background-color: black;
+    display: inline-block;
 }
 
 main{
-    height: 90vw;
-    width: 90vw;
+    height: 200px;
+    width: 200px;
     display: flex;
     flex-wrap: wrap;
     background-color: whitesmoke;
 }
 
 .pixel{
-    height: 9vw;
-    width: 9vw;
+    height: 20px;
+    width: 20px;
     border: 0.5px solid black;
 }
