--- a/Leah/wk08/1-mon/style.css
+++ b/Leah/wk08/1-mon/style.css
@@ -1,26 +1,67 @@
 *{
     box-sizing: border-box;
 }
+h1,h2,h3{
+    font-family: 'Cabin Sketch', sans-serif;
+    background-color:rgba(255, 255, 255, 0.75);
+    padding: 4vh;
+}
+h1{
+    font-size: 3em;
+}
+body{
+    background-size: cover;
+    background-position: 50% 50%;
+    text-align: center;
+}
 form{
+    display: block;
+    line-height: 5vw;
+}
+input{
     display: inline-block;
+    margin: auto;
+    height: 5vw;
+}
+button{
+    display: inline-block;
+    height: 5vw;
+}
+.wrapper{
+    display: flex;
+    margin: 0 10vw;
 }
 .color-indicator{
+    flex:1;
     height: 5vw;
     width: 5vw;
     background-color: black;
+    border: 1px solid black;
     display: inline-block;
 }
-
 main{
-    height: 200px;
-    width: 200px;
+    margin: 5vh auto;
+    height: 30vw;
+    width: 30vw;
     display: flex;
     flex-wrap: wrap;
-    background-color: whitesmoke;
+    background-color: #FFF;
 }
-
 .pixel{
-    height: 20px;
-    width: 20px;
+    height: 3vw;
+    width: 3vw;
     border: 0.5px solid black;
+}
+footer{
+    width: 70vw;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 5vh auto;
+    justify-content: space-evenly;
+}
+.poster-div{
+    background-position: 50% 50%;
+    background-size: cover;
+    width:10vw;
+    height: 15vw;
 }
